; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_shmem.c_ShmemInitHash.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_shmem.c_ShmemInitHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32, i32, i32 }

@ShmemAllocNoError = common dso_local global i32 0, align 4
@HASH_SHARED_MEM = common dso_local global i32 0, align 4
@HASH_ALLOC = common dso_local global i32 0, align 4
@HASH_DIRSIZE = common dso_local global i32 0, align 4
@HASH_ATTACH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ShmemInitHash(i8* %0, i64 %1, i64 %2, %struct.TYPE_5__* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i64, i64* %8, align 8
  %14 = call i32 @hash_select_dirsize(i64 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 2
  store i32 %14, i32* %16, align 4
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 3
  store i32 %14, i32* %18, align 8
  %19 = load i32, i32* @ShmemAllocNoError, align 4
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 8
  %22 = load i32, i32* @HASH_SHARED_MEM, align 4
  %23 = load i32, i32* @HASH_ALLOC, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @HASH_DIRSIZE, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* %10, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* %10, align 4
  %29 = load i8*, i8** %6, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @hash_get_shared_size(%struct.TYPE_5__* %30, i32 %31)
  %33 = call i8* @ShmemInitStruct(i8* %29, i32 %32, i32* %11)
  store i8* %33, i8** %12, align 8
  %34 = load i32, i32* %11, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %5
  %37 = load i32, i32* @HASH_ATTACH, align 4
  %38 = load i32, i32* %10, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %10, align 4
  br label %40

40:                                               ; preds = %36, %5
  %41 = load i8*, i8** %12, align 8
  %42 = bitcast i8* %41 to i32*
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  store i32* %42, i32** %44, align 8
  %45 = load i8*, i8** %6, align 8
  %46 = load i64, i64* %7, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %48 = load i32, i32* %10, align 4
  %49 = call i32* @hash_create(i8* %45, i64 %46, %struct.TYPE_5__* %47, i32 %48)
  ret i32* %49
}

declare dso_local i32 @hash_select_dirsize(i64) #1

declare dso_local i8* @ShmemInitStruct(i8*, i32, i32*) #1

declare dso_local i32 @hash_get_shared_size(%struct.TYPE_5__*, i32) #1

declare dso_local i32* @hash_create(i8*, i64, %struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
